[tool.poetry]
name = "aifs"
version = "0.0.15"
description = "Local semantic search. Stupidly simple."
authors = ["Killian Lucas <killian@openinterpreter.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.5.5"
pysqlite3-binary = "^0.5.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
     